--- a/styles/style.css
+++ b/styles/style.css
@@ -9,19 +9,25 @@ body{
    width: 1165px;
    margin: 0 auto;
 }
-
+a {
+	color:black ;
+}
 
 nav {
-	color:black ;
 	font-size: 11px;
 	font-weight: 700;
-	word-wrap: break-word
+	word-wrap: break-word;
+	vertical-align: middle;
 }
 li {
 	display: inline-block;
 	margin-top: 21px;
 	margin-right: 35px;
 	margin-bottom: 42px;
+}
+.eli {
+	display: inline-block;
+	vertical-align: middle;
 }
 h2 {
 	color: black;
@@ -89,33 +95,42 @@ h3 {
 
 .div2 {
 	display: inline-block;
+	width: 758px;
+	height: 900;
 }
 .div3 {
+	margin-left: 23px;
 	display: inline-block;
+	width: 362px;
+	height: 636px;
+	vertical-align: top;
 }
- .sec2 {
- 	display: inline-block;
- 	position: relative;
- }
- .tag {
- 	color: white;
+.div3 > img {
+	margin-bottom: 98px;
+}
+.sec2 {
+   display: inline-block;
+   position: relative;
+}
+.tag{
+	color: white;
 	font-size: 20px;
 	font-weight: 700;
 	word-wrap: break-word;
-	width: 100%;
-	height: 100%;
 	position: absolute;
-	top:50%;
+	top: 50%;
 	left: 50%;
-	transform: translate(-13%, -5%);
- }
+	transform: translate(-50%, -150%);
+
+}
+ 
 
 .div4 {
 	width:1510px ;
 	height: 201px;
 	background-color:#243043;
 	margin-top: 36px;
-	padding-top: 59px;
+	padding-top: 50px;
 	padding-left: 137px;
 }
 .pos {
@@ -128,16 +143,48 @@ h3 {
 }
 .div6 > h5 {
 	display: inline-block;
-	margin-right: 75px;
+	margin-right: 70px;
 	margin-bottom: 14px;
 }
 .div7 > h5 {
 	display: inline-block;
-	margin-right: 90px;
+	margin-right: 91px;
 	margin-bottom: 14px;
 }
 .div8 > h5 {
 	display: inline-block;
 	margin-right: 86px;
 	margin-bottom: 14px;
+}
+.about {
+   margin-right:118px;
+   display: inline-block;
+}
+.help {
+   margin-right:128px;
+   display: inline-block;
+}
+.terms {
+   margin-right:122px;
+   display: inline-block;
+}
+.guidlines {
+   margin-right:99px;
+   display: inline-block;
+}
+
+h4 {
+	color: white;
+	font-size: 13px;
+	font-weight: 400;
+	word-wrap: break-word;
+	width: 250px;
+	height: 14px;
+	display: inline-block;
+}
+.logo {
+	display: inline-block;
+	vertical-align: top;
+	margin-left: 416px;
+	height: 30px;
 }
